<resources>
    <string name="app_name">StoryApp</string>
    <string name="logout">Logout</string>
    <string name="gambar_cerita_pengguna">gambar cerita pengguna</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_story">Add Story</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="selamat_datang_storiers">Selamat Datang, Storiers !</string>
    <string name="abadikan_momenmu_di_story_app">share moment kamu disini</string>
    <string name="masuk">masuk</string>
    <string name="belum_punya_akun">belum punya akun ? </string>
    <string name="upload_gambar">Upload Gambar</string>

    <string name="masukkan_email">Masukkan email</string>
    <string name="masukkan_password">Masukkan password</string>

</resources>